<resources>
    <string name="app_name">Nhom8-QuanLyChiTieu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chao_mung">Chào Mừng</string>
    <string name="tai_dang_nhap_bang">Tên Đăng Nhập Bằng Gmail</string>
    <string name="mat_khau">Mật Khẩu</string>
    <string name="dang_nhap">Đăng Nhập</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="dang_ky">Đăng Ký</string>
    <string name="hoac_dang_nhap_bang">hoặc đăng nhập bằng</string>
    <string name="email_hint">example@example.com</string>
    <string name="password_hint">••••••••</string>
    <string name="login_failed">Đăng nhập thất bại. Vui lòng kiểm tra email và mật khẩu.</string>
    <string name="login_success">Đăng nhập thành công!</string>
    <string name="register_success">Đăng ký thành công!</string>

</resources>